AM_CFLAGS = -std=c99 -g -Wall -O3
AM_LDFLAGS =

bin_PROGRAMS = gneural_network
gneural_network_SOURCES = activation.c\
error.c\
feedforward.c\
gneural_network.c\
load.c\
randomize.c\
rnd.c\
simulated_annealing.c\
binom.c\
fact.c\
genetic_algorithm.c\
gradient_descent.c\
msmco.c\
parser.c\
random_search.c\
save.c\
ExponentialFamily.c\
GaussianFamily.c\
ProbabilitySpace.c\
MonteCarlo.c\
Functions.c\
ProductDensity.c\
ConditionalDensity.c\
ErrorDensity.c\
bayesian.c\
lapack_helpers.c\
network_helpers.c\
helpers.c


gneural_network_LDADD = -lm
gneural_network_LDADD += -llapack -lblas -llapacke
